# oscal-pki-policy-converter

./: .gitignore  README.md  bridge.toml  common.toml  convert_policy_to_catalog.sh  pyproject.toml
.devcontainer/: devcontainer.json
oscal_pki_policy_converter/: __main__.py
oscal_pki_policy_converter/parsers/: __init__.py  base_parser.py  simple_oscal_parser.py
pki_policy_tokenizer/: __main__.py  docx_to_md.sh  install_pandoc.sh  tokenize_policies.py
