[tool.poetry]
name = "oscal-pki-policy-converter"
version = "0.1.0"
description = ""
authors = ["Robert Sherwood <robert.sherwood@credentive.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
oscal-pydantic-v2 = "^2024.2.29"
stanza = "^1.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
